<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            android:elevation="4dp"
            app:title=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtTituloToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/gold"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icono_diana"
            app:layout_constraintTop_toBottomOf="@id/toolbarMain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layoutBotonesMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="48dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo">

            <Button
                android:id="@+id/btnContinuar"
                style="@style/BotonPrincipal"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/continuar_partida"
                app:icon="@drawable/icono_continuar"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@null" />

            <Button
                android:id="@+id/btnNuevaPartida"
                style="@style/BotonPrincipal"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/nueva_partida"
                app:icon="@drawable/icono_play"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@null" />

            <Button
                android:id="@+id/btnHistorialPartidas"
                style="@style/BotonPrincipal"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/historial_partidas"
                app:icon="@drawable/icono_reglas_azul"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@null" />

            <Button
                android:id="@+id/btnAjustes"
                style="@style/BotonPrincipal"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/ajustes"
                app:icon="@android:drawable/ic_menu_manage"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/blue" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationMain"
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blue"
        app:itemIconTint="@null"
        app:itemTextColor="@color/gold"
        app:headerLayout="@layout/header_menu_lateral"
        app:menu="@menu/menu_lateral" />
</androidx.drawerlayout.widget.DrawerLayout>